Created REST endpoints for activating PTT
