# radio-interface/programmatic/public/swagger/radio-interface-programmatic.yml
@@ -6,7 +6,7 @@ info:
   license:
     name: MIT
     url: http://opensource.org/licenses/MIT
-host: localhost:3000
+host: roip-interface-ch1ch2:3000
 basePath: /
 schemes:
   - http
@@ -37,7 +37,7 @@ paths:
       parameters:
         - name: channelInternalName
           in: path
-          description: ID of channel to fetch
+          description: Name of channel to fetch
           required: true
           type: string
       responses:
@@ -45,6 +45,42 @@ paths:
           description: channel response
           schema:
             $ref: '#/definitions/channel'
+        '400':
+          description: parameter invalid
+        '404':
+          description: channel not found
+        default:
+          description: unexpected error
+  /channels/{channelInternalName}/transmitStart:
+    put:
+      description: Activates the radio device for a transmission
+      parameters:
+        - name: channelInternalName
+          in: path
+          description: Name of channel to activate
+          required: true
+          type: string
+      responses:
+        '200':
+          description: Successful set
+        '400':
+          description: parameter invalid
+        '404':
+          description: channel not found
+        default:
+          description: unexpected error
+  /channels/{channelInternalName}/transmitStop:
+    put:
+      description: Deactivates the radio device for a transmission
+      parameters:
+        - name: channelInternalName
+          in: path
+          description: Name of channel to deactivate
+          required: true
+          type: string
+      responses:
+        '200':
+          description: Successful set
         '400':
           description: parameter invalid
         '404':
